# learning-rust

api-rust/: .env  .gitignore  Cargo.toml
api-rust/migrations/2020-08-16_2220_create_users/: up.sql
api-rust/migrations/2020-08-19-022211_create_users/: up.sql
api-rust/src/: db.rs  main.rs  models.rs  routes.rs  schema.rs  user.rs
destructuring/: Cargo.toml
destructuring/src/: main.rs
fizz_buzz/: Cargo.toml
fizz_buzz/src/: main.rs
functions/: Cargo.toml
functions/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
hello_cargo/: Cargo.toml
hello_world/: main
variables/: Cargo.toml
variables/src/: main.rs
