[package]
name = "api-rust"
version = "0.1.0"
authors = ["Eduardo Peralta Rodríguez <eduardoperaltardgz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4.2", default-features = false }
rocket_cors = { version = "0.5.1", default-features = false }
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.44"
diesel = { version = "1.4.3", features = ["postgres"] }
dotenv = "0.9.0"

[dependencies.rocket_contrib]
version = "0.4.0"
features = ["json"]